openshift-add/datapusher-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: datapusher
  name: datapusher
spec:
  ports:
    - name: "8800"
      port: 8800
      targetPort: 8800
  selector:
    io.kompose.service: datapusher
status:
  loadBalancer: {}
